--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Gemini API Configuracion
 # https://aistudio.google.com/api-keys
-GEMINI_API_KEY=<AIzaSyB38qdksRsQts2Lx6BtaNFlLE0lu8sAU80>
+GEMINI_API_KEY=AIzaSyAJAg3rSKDxd1FLsMgvIFBlbgNJnMUpU4M
 
 
 # --- Variables para LangSmith Opcional
