--- a/trabajo_final/requirements.txt
+++ b/trabajo_final/requirements.txt
@@ -1,9 +1,20 @@
-python-dotenv
-langchain
-langchain-google-genai
-langchain-chroma
-langgraph
-notion-client
-langchain-core
-langchain-community
-chromadb
+# requirements.txt - dependencias principales
+pandas>=2.2.2
+python-dotenv>=1.0.1
+
+# LangChain, LangGraph y Google GenAI connector (nombres según ecosistema)
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-google-genai>=0.1.0
+langgraph>=0.1.0
+
+# Chroma vectorstore (Chromadb) y el adaptador langchain-chroma
+chromadb>=0.5.0
+langchain-chroma>=0.0.1
+
+# Tipos y utilidades
+typing-extensions>=4.5.0
+
+# (opcional) si trabajas en entornos con notebooks sin headless rendering
+# not required en CLI puro:
+# jupyterlab
