Falta Conectar Notion
Nuevas funciones auxiliares para probar el modelo

--- a/trabajo_final/requirements.txt
+++ b/trabajo_final/requirements.txt
@@ -1,16 +1,26 @@
-# requirements.txt - dependencias
-pandas>=2.2.2
-python-dotenv>=1.0.1
+# requirements.txt
 
-# LangChain, LangGraph y Google GenAI connector
-langchain>=0.3.0
-langchain-community>=0.3.0
-langchain-google-genai>=0.1.0
-langgraph>=0.1.0
+pandas
+python-dotenv
 
-# Chroma vectorstore (Chromadb) y el adaptador langchain-chroma
-chromadb>=0.5.0
-langchain-chroma>=0.0.1
+# LangChain
+langchain
+langchain-core
+langchain-community
+langchain-google-genai
 
-# Tipos y utilidades
-typing-extensions>=4.5.0
+# LangGraph
+langgraph
+
+# Chroma vectorstore
+chromadb
+langchain-chroma
+
+# Notion API
+notion-client
+
+# LangSmith
+langsmith
+
+# Utilidades
+typing-extensions
