--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
 # Gemini API Configuracion
 # https://aistudio.google.com/api-keys
-GEMINI_API_KEY=<AIzaSyB38qdksRsQts2Lx6BtaNFlLE0lu8sAU80>
+GEMINI_API_KEY="apikey"
 
+
+NOTION_DATABASE_ID=28dfe5590eb48096bc47000c2319fb10
+NOTION_DATABASE_MENU=28efe5590eb48093a10efb08f0c1f26a
+NOTION_DATABASE_INFO_RES=28dfe5590eb4801bb79bfbbf7fb2903e
+NOTION_DATABASE_CONVERSATION=28ffe5590eb4806fbd2cd78c2494f7f1
 
 # --- Variables para LangSmith Opcional
 # langsmith es una plataforma para rastrear y gestionar tus interacciones con modelos de lenguaje.
 # Puedes registrarte en https://langchain.com/langsmith y obtener una clave API.
 #LANGCHAIN_TRACING_V2="true"
-#LANGCHAIN_API_KEY="lsv2_pt_....."
+#LANGCHAIN_API_KEY="apikey"
 #LANGCHAIN_PROJECT="default"
